--- a/section-11/starting/src/index.css
+++ b/section-11/starting/src/index.css
@@ -1,16 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
+
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: sans-serif;
-  background: #fff;
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 body {
   margin: 0;
-}
-
-main {
-  margin-top: 6rem;
+  background-color: #3f3f3f;
 }
